--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.14.0
   pocketbase: ^0.23.0
+  url_launcher: ^6.2.5
 
 dev_dependencies:
   flutter_test:
